# XYZ-Wallet-v1

./: .gitignore  AZURE_SETUP.md  PRODUCTION_DEPLOYMENT.md  README.md  SECURITY_FIX.md  SECURITY_FIX_SECRETS.md  azure-deploy.md  check-signer-registration.js  contract-addresses.env  deploy-local.js  deploy-package.js  deploy.bat  deploy.cmd  generate-passkey.html  get-passkey.html  initialize-smart-wallet.js  package-lock.json  package.json  rebuild-all-contracts.bat  rebuild-contract.bat  rebuild-contract.sh  start.bat  start.sh  tatus  test-contract-cli.sh  test-deposit-cli.sh  test-deposit-invoke.js  update-contract-id.bat  web.config
.github/workflows/: azure-deploy-cli.yml  azure-deploy-fast.yml  azure-deploy-fast.yml.disabled  azure-deploy-robust.yml  azure-deploy-service-principal.yml  azure-deploy-simple.yml  azure-deploy.yml  master_xyz-wallet-v1.yml  master_xyz-wallet.yml
client/: GEOLINK_INTEGRATION.md  env.example  geolink-env.example  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.tsx  index.css
client/src/components/: AuthModal.tsx  ContractInfoOverlay.tsx  Header.tsx  (+17 more)
server/: .env.backup  check-contract-initialization.js  decode-diagnostic.js  env.example  index.js  package-lock.json  package.json  test-transaction.js
server/routes/: auth.js  location.js  smartWallet.js  soroswap.js  wallet.js
soroban-contracts/: Cargo.toml
soroban-contracts/src/: contract.rs  lib.rs  test.rs
soroban-contracts/webauthn-verifier/: Cargo.toml
soroban-contracts/webauthn-verifier/src/: contract.rs  lib.rs  test.rs
(+18 files in other folders)
